--- a/Topic 0/style.css
+++ b/Topic 0/style.css
@@ -10,7 +10,7 @@ html {
 .footer {
   border-radius: 6px;
   padding: 10px 15px;
-  margin: 0 20px 24px 20px;
+  margin: 0 10px 24px 10px;
 }
 
 .header {
@@ -22,37 +22,35 @@ html {
 
 .navigation {
   float: left;
-  width: 15%;
+  width: 20%;
   font-size: 12px;
   background: blue;
 }
 
 .sidebar {
   float: right;
-  width: 25%;
+  width: 15%;
   font-size: 10px;
   background: magenta;
 }
 
 .content {
   float: left;
-  width: 41%;
   border-style: double;
   border-color: #2db34a;
   border-radius: 6px;
   margin-bottom: 20px;
   font-size: 14px;
+  display: block;
 }
 
 .footer {
-  width: 100%;
+  position: absolute;
   bottom: 0;
-  position: relative;
-  float: left;
+  width: 100%;
   text-align: center;
   font-size: 10px;
   background: magenta;
-  display: block;
 }
 
 .headline,
