--- a/Topic 0/style.css
+++ b/Topic 0/style.css
@@ -1,13 +1,19 @@
+* {
+  box-sizing: border-box;
+  text-align: center;
+}
+
 html {
   font-size: 14px;
   font-family: Verdana;
 }
 
-/* background */
+
 .header,
 .sidebar,
 .navigation,
-.footer {
+.footer,
+.content {
   border-radius: 6px;
   padding: 10px 15px;
   margin: 0 10px 24px 10px;
@@ -22,41 +28,50 @@ html {
 
 .navigation {
   float: left;
-  width: 20%;
+  width: 25%;
   font-size: 12px;
   background: blue;
-}
-
-.sidebar {
-  float: right;
-  width: 15%;
-  font-size: 10px;
-  background: magenta;
+  display: inline-block;
 }
 
 .content {
-  float: left;
+  width: 30%;
   border-style: double;
   border-color: #2db34a;
   border-radius: 6px;
   margin-bottom: 20px;
   font-size: 14px;
-  display: block;
+  display: inline-block;
+}
+
+.sidebar {
+  width: 25%;
+  font-size: 10px;
+  background: magenta;
+  display: inline-block;
+}
+
+.headline, article, .footline {
+    background-color: #999999;
+    margin: 0.5rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+div {
+  display: flex;
+}
+
+.navigation,
+.sidebar {
+  flex: initial;
+}
+
+.content {
+  flex: auto;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
   font-size: 10px;
   background: magenta;
-}
-
-.headline,
-.footline,
-article {
-  display: block;
-  padding: 24px 15px;
-  margin: 0 20px 24px 20px;
 }
